public/css/index.css
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  color: #f73076;
  height: 100vh;
  line-height: 1.6;
  overflow: hidden;
  --bday-pic-load-delay: 500ms;
  --bday-message-load-delay: 1200ms;
}

.container {
  width: 100%;
  height: 100%;
  /* CSS Smooth Scroll */
  overflow-y: scroll;
  scroll-behavior: smooth;
  scroll-snap-type: y mandatory;
}

.lead {
  font-size: 1.5rem;
}

section {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  height: 100vh;

  /* Scroll Snap */
  scroll-snap-align: center;
}

section h1 {
  font-size: 4rem;
}

/* .happy-bday {
} */

.bday-pic {
  margin: 0 30px 0 30px;
  animation: bday-pic-load 300ms ease-in var(--bday-pic-load-delay);
  animation-fill-mode: forwards;
  transform: translateY(-40px);
  opacity: 0;
}
.bday-message {
  font-family: 'Galada', cursive;
  font-weight: 600;
  font-size: 70px;
  animation: bday-pic-load 300ms ease-in var(--bday-message-load-delay);
  animation-fill-mode: forwards;
  transform: translateY(-40px);
  opacity: 0;
}

.bday-message p {
  margin: 0;
  padding: 0;
}

.amazing-reasons {
  background-image: url('../img/amazing.jpg');
  background-size: cover;
  display: flex;
}

.love-gallery {
  background-image: url('../img/love.jpg');
  background-size: cover;
  display: flex;
}

.video-gift {
  background-image: url('../img/video-message.jpg');
  background-size: cover;
  display: flex;
}

.amazing-reasons-section {
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  color: white;
}

.box {
  opacity: 0.9;
  padding: 30px 50px 50px 50px;
  border-radius: 7px;
}

.amazing-reasons .amazing-reasons-section .box {
  background-color: #f48a36d4 !important;
}

.love-gallery .amazing-reasons-section .box {
  background-color: #e54545f5 !important;
}

.video-gift .amazing-reasons-section .box {
  background-color: #9f7464d9 !important;
}

.amazing-reasons .amazing-reasons-section .box button {
  background: #ba6019d4;
  color: white;
}

.love-gallery .amazing-reasons-section .box button {
  background: #d11212bf;
  color: white;
}

.video-gift .amazing-reasons-section .box button {
  background: #6c4638cc;
  color: white;
}

button {
  margin: 30px 15px 15px 15px;
  width: 200px;
  height: 60px;
  border-radius: 10px;
  border: none;
  border-bottom: 2px solid #3f3e3e;
  border-right: 2px solid #3f3e3e;
  font-family: 'Raleway', sans-serif;
  font-size: 20px;
  font-weight: 600;
}

button:hover {
  cursor: pointer;
  color: #dbdada;
}

.amazing-reasons .amazing-reasons-section .box button:hover {
  background: #ac5510;
}

.love-gallery .amazing-reasons-section .box button:hover {
  background: #c20202;
}

.video-gift .amazing-reasons-section .box button:hover {
  background: #704333;
}

@keyframes bday-pic-load {
  0% {
    transform: translateY(-40px);
    opacity: 0;
  }

  100% {
    transform: translateY(0px);
    opacity: 1;
  }
}

